updated .env and added Dockerfile and start.sh

--- a/airflow/.env.example
+++ b/airflow/.env.example
@@ -1,3 +1,17 @@
-GCP_PROJECT_ID=your_project_id_here
-BQ_DATASET_ID=your_dataset_id_here
-BQ_TABLE_ID=your_table_id_here
+GCP_PROJECT_ID='' # Replace with your actual GCP project ID
+BQ_DATASET_ID=''  # Replace with your desired dataset name
+BQ_TABLE_ID='' # Replace with your BigQuery table name
+FERNET_KEY=''
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+GOOGLE_APPLICATION_CREDENTIALS='/opt/airflow/keys/service-account-key.json'
+
+
+AIRFLOW_ADMIN_USERNAME=
+AIRFLOW_ADMIN_FIRSTNAME=
+AIRFLOW_ADMIN_LASTNAME=
+AIRFLOW_ADMIN_EMAIL=
+AIRFLOW_ADMIN_PASSWORD=
+
+
