--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -45,9 +45,10 @@ services:
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
       - ./keys:/opt/airflow/keys  # Mount the keys folder
+      - ./start.sh:/start.sh  # Mount start.sh inside the container
     ports:
       - "8080:8080"
-    command: webserver
+    command: ["bash", "-c", "/start.sh && airflow webserver"]  # Create user and start webserver
 
   airflow-scheduler:
     image: apache/airflow:2.5.3
